--- a/drafting.html
+++ b/drafting.html
@@ -1,12 +1,16 @@
 <!--
-        Copyright 2008 Denis Sokolov <denis@licejus.lt>
+	This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
 
-        All rights reserved.
-        The application will be released under GPL a bit later.
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
 
-        This program is distributed in the hope that it will be useful,
-        but WITHOUT ANY WARRANTY; without even the implied warranty of
-        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>
 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
@@ -21,8 +25,8 @@
 		<meta name="robots" content="all">
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<link rev="made" href="mailto:denis@sokolov.cc">
-		<link rel="shortcut icon" href="img/favicon.png">
-		<link rel="apple-touch-icon" href="img/favicon.png">
+		<link rel="shortcut icon" href="ktimer.png">
+			<!-- GPL 3, Alexandre Moore, http://nuovext.pwsp.net/ -->
 	</head>
 	<body>
 		<table><tr><td><div id="content">
