--- a/drafting.html
+++ b/drafting.html
@@ -60,36 +60,33 @@
 				<![endif]-->
 				<li>
 					<p>
-						Hello, fellow judge!
+						Hello, fellow judge, willing to call a Magic draft!
 					</p>
 					<p>
-						The application is supposed to help you call the
-							standart draft.
-					</p>
-					<p>
-						The idea is that all you have to do is read the
+						All you have to do is read the
 							text on the screen and watch the players.
-						However, sometimes you will encounter
-							<em class="template">emphasized</em> text,
-							which you should change according to your draft
-							situation.
 					</p>
 					<p>
-						The draft is divided into actions/screens, where
-							the program will wait for your action of
-							pressing a button, which you should <strong>not</strong>
-							announce. ^_^
-					</p>
-					<p>
-						Since the button is always focused, the application
-							is controlled with the <strong>space</strong> button.
-					</p>
-					<p>
-						More information about the program will be found
-							<a href="#endStep">at the end</a> of the
-							program.
+						The program is controlled with a single button
+							on the screen.
+						Simply press a <strong>space</strong> button on
+							your keyboard to advance.
 					</p>
 					<button>Understood. Let&rsquo;s go!</button>
+					<p class="appname">
+						Magic drafting application version
+							<span class="version"
+								title="Released on the 28th of December, 2008">0.2</span>.
+						<span title="The program is licensed under GPL 3">
+							<img src="copyleft.png" alt="Copyleft.">&nbsp;2008.
+						</span>
+						<a href="#endStep"
+							title="Switch to the screen about the program"
+							>About</a>.
+						<a href="http://code.google.com/p/magic-drafting-application/"
+							title="See the application&rsquo;s homepage, where you can find full information on it."
+							>Homepage</a>.
+					</p>
 				</li>
 				<li>
 					<p class="warning">
@@ -101,11 +98,35 @@
 							manually at any time.
 					</p>
 					<p>
-						Please report all bugs and feature requests
-							(including text changing proposals) to
+						Please <a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Bug%20report"
+							>report all problems</a> you will encounter
+							and <strong>be bold</strong> in doing so!
+						This will help us fix faster.
+					</p>
+					<p>
+						If you&rsquo;d like to see a new feature in this
+							application,
+							<a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Feature%20request"
+							>just say so</a> and we will try to make it
+							happen!
+					</p>
+					<p>
+						If you have problems reporting, please
+							contact us using this email:
 							<span class="email">drafting@sokolov.cc</span>.
 					</p>
 					<button>I understand.</button>
+				</li>
+				<li>
+					<p>
+						To call the draft without the internet,
+							use your browser&rsquo;s
+							‘File &rarr; Save Page’ function.
+						But please check back online sometimes, as it will
+							be updated, while your offline version will stay
+							the same.
+					</p>
+					<button>Ok, let us start the draft.</button>
 				</li>
 				<li id="begin">
 					<p>Welcome to the draft.</p>
@@ -126,7 +147,7 @@
 						focused on your cards and try not to give away
 						any kind of information to your opponents.
 					</p>
-					<button>Got it.</button>
+					<button>They got it.</button>
 				</li>
 				<li>
 					<p>
@@ -205,13 +226,26 @@
 				<li id="endStep">
 					<h1>About the program</h1>
 					<p>
-						The program is written in JavaScript + jQuery by
+						The program is written by
 						Denis Sokolov &mdash; a level 1 judge from Lithuania
 						(<a href="http://sokolov.cc">homepage</a>).
 					</p>
 					<p>
-						Please report all bugs and feature requests
-							(including text changing proposals) to
+						Please <a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Bug%20report"
+							>report all problems</a> you will encounter
+							and <strong>be bold</strong> in doing so!
+						This will help us fix faster.
+					</p>
+					<p>
+						If you&rsquo;d like to see a new feature in this
+							application,
+							<a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Feature%20request"
+							>just say so</a> and we will try to make it
+							happen!
+					</p>
+					<p>
+						If you have problems using web service, please
+							contact us using this email:
 							<span class="email">drafting@sokolov.cc</span>.
 					</p>
 					<p>
@@ -223,17 +257,13 @@
 							the same.
 					</p>
 					<p>
-						Currently all rights to the application are reserved,
-							but this is mainly due the beta status of the
-							program.
-						As soon as it will reach a certain quality, I
-							will release it under GPL.
+
 					</p>
 					<p>
 						Have a nice day!
 					</p>
 					<p>
-						<a href="#begin">Restart the draft</a>.
+						<a href="">Restart the draft</a>.
 					</p>
 				</li>
 			</ul>
