IE incompatibility notice on loading screen
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@8 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -31,8 +31,22 @@
 	<body>
 		<table><tr><td><div id="content">
 			<p class="loading">
-				Loading the timer...
+				Loading the application...
 			</p>
+			<!--[if IE]>
+				<p class="loading warning">
+					You are using Internet Explorer.
+					If the application never loads, it is because
+						Internet Explorer is an old, vulnerable and
+						incompatible browser.
+					Help yourself and the Internet &mdash; get a better
+						browser, like
+						<a href="http://www.google.com/chrome">Chrome</a>,
+						<a href="http://www.mozilla.com/firefox">Firefox</a>,
+						or
+						<a href="http://www.opera.com">Opera</a>.
+				</p>
+			<![endif]-->
 			<ul id="steps">
 				<!--[if IE]>
 				<li>
