"Currently drafting" info. Closes #7.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@9 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -182,7 +182,7 @@
 					</p>
 					<button>Begin the draft.</button>
 				</li>
-				<li class="simpleBooster"></li>
+				<li class="simpleBooster" title="Booster 1"></li>
 				<li>
 					<p class="pre" title="3">You now have one minute to review what you have
 						drafted.</p>
@@ -204,7 +204,7 @@
 					</p>
 					<button>Begin the draft.</button>
 				</li>
-				<li class="simpleBooster"></li>
+				<li class="simpleBooster" title="Booster 2"></li>
 				<li>
 					<p class="pre" title="3">You now have one minute to review what you have
 						drafted.</p>
@@ -225,7 +225,7 @@
 					</p>
 					<button>Begin the draft.</button>
 				</li>
-				<li class="simpleBooster"></li>
+				<li class="simpleBooster" title="Booster 3"></li>
 				<li>
 					<p>
 						The draft is now over.
