14-card packs. Closes #3. Adds settings screen, and preparing draft on the #begin step.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@10 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -140,7 +140,17 @@
 							be updated, while your offline version will stay
 							the same.
 					</p>
-					<button>Ok, let us start the draft.</button>
+					<button>Noted.</button>
+				</li>
+				<li id="settings">
+					<h1>Settings</h1>
+					<p title="If you draft prepared boosters with the basic land removed, select this option.">
+						<input id="setting-14cardPack" type="checkbox">
+						<label for="setting-14cardPack">
+							Draft 14-card packs
+						</label>
+					</p>
+					<button>Start the draft</button>
 				</li>
 				<li id="begin">
 					<p>Welcome to the draft.</p>
