Storable preferences. Closes #8. Fixes 14-pack setting.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@11 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -151,6 +151,9 @@
 						</label>
 					</p>
 					<button>Start the draft</button>
+					<!--
+						<p class="info">The settings will be automatically saved in your browser.</p>
+					-->
 				</li>
 				<li id="begin">
 					<p>Welcome to the draft.</p>
@@ -178,7 +181,7 @@
 						Please open the first booster of <em class="template">SET</em>,
 							and count the cards
 							<strong>face-down</strong>.
-							There should be 15 cards in there.
+							There should be <span class="cardsInBooster">15</span> cards in there.
 					</p>
 					<button>Yes, there are.</button>
 				</li>
@@ -206,7 +209,7 @@
 						Please open the second booster of <em class="template">SET</em>,
 							and count the cards
 							<strong>face-down</strong>.
-							There should be 15 cards in there.
+							There should be <span class="cardsInBooster">15</span> cards in there.
 					</p>
 					<p>
 						You have to pass the cards now to your
@@ -227,7 +230,7 @@
 					<p>
 						Please open the third booster, and count the cards
 							<strong>face-down</strong>.
-							There should be 15 cards in there.
+							There should be <span class="cardsInBooster">15</span> cards in there.
 					</p>
 					<p>
 						You have to pass the cards now to your
