--- a/drafting.html
+++ b/drafting.html
@@ -90,11 +90,11 @@
 					<p class="appname">
 						Magic drafting application version
 							<span class="version"
-								title="Released on the 29th of December, 2008">0.3.1</span>.
+								title="Released on the 29th of December, 2008">0.3.2</span>.
 						<span title="The program is licensed under GPL 3">
 							<img src="copyleft.png" alt="Copyleft.">&nbsp;2008.
 						</span>
-						<a href="#endStep"
+						<a href="#end"
 							title="Switch to the screen about the program"
 							>About</a>.
 						<a href="http://code.google.com/p/magic-drafting-application/"
@@ -215,7 +215,7 @@
 						You have to pass the cards now to your
 							<strong>right</strong>.
 					</p>
-					<button>Begin the draft.</button>
+					<button>Begin drafting the second booster.</button>
 				</li>
 				<li class="simpleBooster" title="Booster 2"></li>
 				<li>
@@ -236,7 +236,7 @@
 						You have to pass the cards now to your
 							<strong>left</strong>.
 					</p>
-					<button>Begin the draft.</button>
+					<button>Begin drafting the third booster.</button>
 				</li>
 				<li class="simpleBooster" title="Booster 3"></li>
 				<li>
@@ -250,7 +250,7 @@
 					</p>
 					<button>Finish.</button>
 				</li>
-				<li id="endStep">
+				<li id="end">
 					<h1>About the program</h1>
 					<p>
 						The program is written by
@@ -282,9 +282,6 @@
 						But please check back online sometimes, as it will
 							be updated, while your offline version will stay
 							the same.
-					</p>
-					<p>
-
 					</p>
 					<p>
 						Have a nice day!
