Adding explanations of "Look" and "Pass" to players.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@21 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -168,9 +168,18 @@
 					<p>We will draft three boosters &mdash; <span class="v-set1">SET</span>, <span class="v-set2">SET</span> and <span class="v-set3">SET</span>.</p>
 					<p>
 						Please make sure you have these three packs
-						in front of you.
+							in front of you.
 					</p>
-					<button>Yes, they have.</button>
+					<p>
+						During the draft, when I say ‘Look’, you may look
+							at the cards in your hand.
+						I will remind you, when the time is nearly up
+							and when I say ‘Pass’, you should pass your
+							cards at once.
+						If possible, shuffle the cards and lay them out
+							on the table in packs of 3.
+					</p>
+					<button>Continue.</button>
 				</li>
 				<li>
 					<p>
