--- a/drafting.html
+++ b/drafting.html
@@ -160,6 +160,14 @@
 							Draft 14-card packs
 						</label>
 					</p>
+					<p
+						class="vt-5seconds"
+						title="If you would like the application to warn when 5 seconds are remaining till the end of the time, select this option.">
+						<input id="s-5seconds" type="checkbox">
+						<label for="s-5seconds" class="vc-14cardPack">
+							Warning in 5 seconds instead of 10
+						</label>
+					</p>
 					<fieldset>
 						<legend class="vc-sets">Sets:</legend>
 						<p class="setCustomizer">
