Added sounds setting.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@35 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -168,6 +168,14 @@
 							Warning in 5 seconds instead of 10
 						</label>
 					</p>
+					<p
+						class="vt-soundsSetting"
+						title="The application will make certain sounds (like the 10-seconds beep), if this option is enabled.">
+						<input id="s-sounds" type="checkbox">
+						<label for="s-sounds" class="vc-soundsSetting">
+							Sounds
+						</label>
+					</p>
 					<fieldset>
 						<legend class="vc-sets">Sets:</legend>
 						<p class="setCustomizer">
