--- a/drafting.html
+++ b/drafting.html
@@ -164,7 +164,7 @@
 						class="vt-5seconds"
 						title="If you would like the application to warn when 5 seconds are remaining till the end of the time, select this option.">
 						<input id="s-5seconds" type="checkbox">
-						<label for="s-5seconds" class="vc-14cardPack">
+						<label for="s-5seconds" class="vc-5seconds">
 							Warning in 5 seconds instead of 10
 						</label>
 					</p>
