Now testing of sounds existance is integrated.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@39 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -176,6 +176,11 @@
 							Sounds
 						</label>
 					</p>
+					<p id="soundsNotFound" class="warning">
+						(I could not find the sounds.
+						Are you sure you have
+						<a href="http://code.google.com/p/magic-drafting-application/wiki/Sounds">downloaded them?</a>)
+					</p>
 					<fieldset>
 						<legend class="vc-sets">Sets:</legend>
 						<p class="setCustomizer">
