Error message about sounds is better now.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@41 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -176,10 +176,12 @@
 							Sounds
 						</label>
 					</p>
-					<p id="soundsNotFound" class="warning">
-						(I could not find the sounds.
-						Are you sure you have
-						<a href="http://code.google.com/p/magic-drafting-application/wiki/Sounds">downloaded them?</a>)
+					<p id="soundsNotFound" class="warning vc-soundsNotFound">
+						(I have not found any sounds.
+						<a
+							href="http://code.google.com/p/magic-drafting-application/wiki/Sounds"
+							>Download them</a>
+						and <a href="">restart the application</a>.)
 					</p>
 					<fieldset>
 						<legend class="vc-sets">Sets:</legend>
