Adding Kinper sounds.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@44 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -306,6 +306,10 @@
 						Denis Sokolov &mdash; a level 1 judge from Lithuania
 						(<a href="http://sokolov.cc">homepage</a>).
 					</p>
+					<p class="vc-creditsSound creditsSound">
+						The default sound pack is provided by
+							<a href="http://www.kde-look.org/content/show.php?content=50607">Nuno Filipe Povoa</a>
+					</p>
 					<p class="vc-reportBugs">
 						Please <a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Bug%20report"
 							>report all problems</a> you will encounter
