About page upgraded.
git-svn-id: https://magic-drafting-application.googlecode.com/svn/trunk@46 87d332b4-d419-11dd-918e-25ffe7a15323

--- a/drafting.html
+++ b/drafting.html
@@ -26,7 +26,6 @@
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<link rev="made" href="mailto:denis@sokolov.cc">
 		<link rel="shortcut icon" href="ktimer.png">
-			<!-- GPL 3, Alexandre Moore, http://nuovext.pwsp.net/ -->
 	</head>
 	<body>
 		<table><tr><td><div id="content">
@@ -301,44 +300,45 @@
 				</li>
 				<li id="end">
 					<h1 class="vc-about">About the program</h1>
-					<p class="vc-credits">
-						The program is written by
-						Denis Sokolov &mdash; a level 1 judge from Lithuania
-						(<a href="http://sokolov.cc">homepage</a>).
-					</p>
-					<p class="vc-creditsSound creditsSound">
-						The default sound pack is provided by
-							<a href="http://www.kde-look.org/content/show.php?content=50607">Nuno Filipe Povoa</a>
-					</p>
-					<p class="vc-reportBugs">
-						Please <a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Bug%20report"
-							>report all problems</a> you will encounter
-							and <strong>be bold</strong> in doing so!
-						This will help us fix faster.
-					</p>
-					<p class="vc-offerFeatures">
-						If you&rsquo;d like to see a new feature in this
-							application,
-							<a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Feature%20request"
-							>just say so</a> and we will try to make it
-							happen!
-					</p>
-					<p class="vc-contactEmail">
-						If you have problems using web service, please
-							contact us using this email:
-							<span class="email">drafting@sokolov.cc</span>.
-					</p>
-					<p class="vc-offline1">
-						To save this application and use it offline, use
-							your browser&rsquo;s ‘File &rarr; Save Page’
-							function.
-						But please check back online sometimes, as it will
-							be updated, while your offline version will stay
-							the same.
-					</p>
-					<p class="vc-haveaniceday">
-						Have a nice day!
-					</p>
+					<h2>Credits</h2>
+						<p class="vc-credits">
+							The program is written by
+							Denis Sokolov &mdash; a level 1 judge from Lithuania
+							(<a href="http://sokolov.cc">homepage</a>).
+						</p>
+						<p class="vc-creditsSound creditsSound">
+							The default sound pack is provided by
+								<a href="http://www.kde-look.org/content/show.php?content=50607">Nuno Filipe Povoa</a>,
+								the application icon by <a href="http://nuovext.pwsp.net/">Alexandre Moore</a>.
+						</p>
+					<h2>Bugs &amp; features</h2>
+						<p class="vc-reportBugs">
+							Please <a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Bug%20report"
+								>report all problems</a> you will encounter
+								and <strong>be bold</strong> in doing so!
+							This will help us fix faster.
+						</p>
+						<p class="vc-offerFeatures">
+							If you&rsquo;d like to see a new feature in this
+								application,
+								<a href="http://code.google.com/p/magic-drafting-application/issues/entry?template=Feature%20request"
+								>just say so</a> and we will try to make it
+								happen!
+						</p>
+						<p class="vc-contactEmail">
+							If you have problems using web service, please
+								contact us using this email:
+								<span class="email">drafting@sokolov.cc</span>.
+						</p>
+					<h2>Offline use</h2>
+						<p class="vc-offline1">
+							To save this application and use it offline, use
+								your browser&rsquo;s ‘File &rarr; Save Page’
+								function.
+							But please check back online sometimes, as it will
+								be updated, while your offline version will stay
+								the same.
+						</p>
 					<p>
 						<a href="" class="vc-restartDraft">Restart the draft</a>.
 					</p>
