--- a/drafting.html
+++ b/drafting.html
@@ -244,9 +244,9 @@
 				</li>
 				<li class="simpleBooster vt-booster1" title="Booster 1"></li>
 				<li>
-					<p class="pre vc-review" title="3">You now have one minute to review what you have
+					<p class="pre vc-review30" title="3">You now have 30 seconds to review what you have
 						drafted.</p>
-					<var>60</var>
+					<var>30</var>
 					<p class="pulse vc-10seconds" title="10">10 seconds!</p>
 					<samp class="vc-putcardsback">Put back the cards.</samp>
 					<button class="vc-done">Done.</button>
@@ -267,9 +267,9 @@
 				</li>
 				<li class="simpleBooster vt-booster2" title="Booster 2"></li>
 				<li>
-					<p class="pre vc-review" title="3">You now have one minute to review what you have
+					<p class="pre vc-review45" title="3">You now have 45 seconds to review what you have
 						drafted.</p>
-					<var>60</var>
+					<var>45</var>
 					<p class="pulse vc-10seconds" title="10">10 seconds!</p>
 					<samp class="vc-putcardsback">Put back the cards.</samp>
 					<button class="vc-done">Done.</button>
