Added iPhone icon.

--- a/drafting.html
+++ b/drafting.html
@@ -25,7 +25,8 @@
 		<meta name="robots" content="all">
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<link rev="made" href="mailto:denis@sokolov.cc">
-		<link rel="shortcut icon" href="ktimer.png">
+		<link rel="shortcut icon" href="img/ktimer.png">
+		<link rel="apple-touch-icon" href="img/ktimer-big.png" />
 	</head>
 	<body>
 		<table><tr><td><div id="content">
