--- a/drafting.html
+++ b/drafting.html
@@ -360,9 +360,9 @@
 				</p>
 			</noscript>
 		</div></td></tr></table>
-		<script type="text/javascript" src="jquery-1.3.min.js"></script>
+		<script type="text/javascript" src="js/jquery-1.3.min.js"></script>
 		<script type="text/javascript" src="lang/default.js"></script>
 		<script type="text/javascript" src="lang/extra.js"></script>
-		<script type="text/javascript" src="engine.js"></script>
+		<script type="text/javascript" src="js/engine.js"></script>
 	</body>
 </html>
