--- a/drafting.html
+++ b/drafting.html
@@ -23,7 +23,7 @@
 				content="An application for a judge calling a draft in a Magic game.">
 		<meta name="author" content="Denis Sokolov">
 		<meta name="robots" content="all">
-		<link rel="stylesheet" type="text/css" href="styles.css">
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		<link rev="made" href="mailto:denis@sokolov.cc">
 		<link rel="shortcut icon" href="img/ktimer.png">
 		<link rel="apple-touch-icon" href="img/ktimer-big.png" />
