Added auto-complete for set fields.

--- a/drafting.html
+++ b/drafting.html
@@ -24,6 +24,7 @@
 		<meta name="author" content="Denis Sokolov">
 		<meta name="robots" content="all">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
+		<link rel="stylesheet" type="text/css" href="css/jquery.autocomplete.css">
 		<link rev="made" href="mailto:denis@sokolov.cc">
 		<link rel="shortcut icon" href="img/ktimer.png">
 		<link rel="apple-touch-icon" href="img/ktimer-big.png" />
@@ -186,9 +187,9 @@
 					<fieldset>
 						<legend class="vc-sets">Sets:</legend>
 						<p class="setCustomizer">
-							<input id="s-set1" value="Shards of Alara">
-							<input id="s-set2" value="Shards of Alara">
-							<input id="s-set3" value="Shards of Alara">
+							<input id="s-set1" value="">
+							<input id="s-set2" value="">
+							<input id="s-set3" value="">
 						</p>
 					</fieldset>
 					<button class="vc-start">Start the draft</button>
@@ -361,6 +362,8 @@
 			</noscript>
 		</div></td></tr></table>
 		<script type="text/javascript" src="js/jquery-1.3.min.js"></script>
+		<script type="text/javascript" src="js/jquery.autocomplete.pack.js"></script>
+		<script type="text/javascript" src="mtg-data.js"></script>
 		<script type="text/javascript" src="lang/default.js"></script>
 		<script type="text/javascript" src="lang/extra.js"></script>
 		<script type="text/javascript" src="js/engine.js"></script>
